--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://kit.fontawesome.com/1076f813b7.js" crossorigin="anonymous"></script>
+
     <title>AllHues</title>
   </head>
   <body>
